--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   }
 
   const realMarketOptions = ["EURUSD","GBPUSD","USDJPY"];
-  const otcMarketOptions  = ["USD/MXN-otc","USD/PHP-otc","USD/INR-otc","NZD/CHF-otc","UKBrent-otc","CAC 40","FTSE 100"];
+  const otcMarketOptions  = ["USD/MXN-otc","USD/PHP-otc","USD/PKR-otc","USD/BDT-otc","USD/PHP-otc","USD/NGN-otc","USD/EGP-otc","USD/TRY-otc","USD/ARS-otc","USD/COP-otc","CAD/CHF-otc","USD/INR-otc","NZD/CHF-otc","UKBrent-otc","CAC 40","FTSE 100"];
   const otcToggle = document.getElementById("otcToggle");
 
   function updateMarketDropdown() {
